Success experiment result logging Update progress bar

--- a/Practice4_Tox21_CNN/Assignment4_logP_CNN.ipynb
+++ b/Practice4_Tox21_CNN/Assignment4_logP_CNN.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f21455dcbf0>"
+       "<torch._C.Generator at 0x7ffb9afbcfb0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,6 +32,8 @@
     "import argparse\n",
     "import sys\n",
     "import traceback\n",
+    "import json\n",
+    "from tqdm import tqdm_notebook, tqdm\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -67,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,8 +175,9 @@
     "        list_n_filter = [32*2**i for i in range(args.n_layer)]\n",
     "        \n",
     "        self.embedding = self.create_emb_layer(args.vocab_size, args.emb_train)\n",
+    "\n",
     "        list_res_blocks = [\n",
-    "            ResBlock(1, 32, args.stride, args.use_bn, args.dp_rate, args.block_type)\n",
+    "            ResBlock(1, 32, args.stride, args.use_bn, args.dp_rate, args.block_type),\n",
     "        ]\n",
     "        self.res_blocks = nn.Sequential(*list_res_blocks)\n",
     "        self.fc = nn.Linear(122880, 1)\n",
@@ -190,12 +203,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Train, Validate, Evaluate"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, partition, optimizer, criterion, char_to_ix, args):\n",
+    "def train(model, partition, optimizer, criterion, char_to_ix, args, **kwargs):\n",
     "    data_iter = DataLoader(\n",
     "        partition['train'],\n",
     "        batch_size=args.batch_size,\n",
@@ -220,6 +240,7 @@
     "        optimizer.step()\n",
     "\n",
     "        cnt_iter += 1\n",
+    "        args.bar.update(len(X))\n",
     "\n",
     "    return model, epoch_train_loss/cnt_iter\n",
     "\n",
@@ -246,14 +267,13 @@
     "\n",
     "    return epoch_val_loss/cnt_iter\n",
     "\n",
-    "def test(model, partition, char_to_ix, args):\n",
+    "def test(model, partition, char_to_ix, args, **kwargs):\n",
     "    data_iter = DataLoader(\n",
     "        partition['test'],\n",
     "        batch_size=args.test_batch_size,\n",
-    "        shuffle=args.shuffle\n",
+    "        shuffle=False\n",
     "    )\n",
     "    \n",
-    "    cnt_iter = 0\n",
     "    list_y, list_pred_y = list(), list()\n",
     "    for batch_idx, batch in enumerate(data_iter):\n",
     "        X, y = batch[0], batch[1]\n",
@@ -264,13 +284,14 @@
     "        pred_y = model(X)\n",
     "        list_y += y.cpu().detach().numpy().tolist()\n",
     "        list_pred_y += pred_y.cpu().detach().numpy().tolist()\n",
-    "        cnt_iter += 1\n",
+    "        args.bar.update(len(X))\n",
     "\n",
     "    mae = mean_absolute_error(list_y, list_pred_y)\n",
     "    std = np.std(np.array(list_y)-np.array(list_pred_y))\n",
     "    return mae, std\n",
     "\n",
     "def experiment(partition, args):\n",
+    "    ts = time.time()\n",
     "    vocab, char_to_ix = create_vocab()\n",
     "    args.vocab_size = len(vocab)\n",
     "    args.input_shape = (args.max_len, args.vocab_size)\n",
@@ -289,37 +310,68 @@
     "    else:\n",
     "        assert False, \"Undefined Optimizer Type\"\n",
     "        \n",
+    "    # Train, Validate, Evaluate\n",
+    "    list_train_loss = list()\n",
+    "    list_val_loss = list()\n",
+    "    list_mae = list()\n",
+    "    list_std = list()\n",
+    "    \n",
+    "\n",
     "    for epoch in range(args.epoch):\n",
-    "        model, train_loss = train(model, partition, optimizer, criterion, char_to_ix, args)\n",
+    "        model, train_loss = train(model, partition, optimizer, criterion, char_to_ix, args, **{'bar':bar})\n",
     "        val_loss = validate(model, partition, criterion, char_to_ix, args)\n",
-    "        mae, std = test(model, partition, char_to_ix, args)\n",
-    "        \n",
-    "        print(train_loss, val_loss, mae, std)\n",
-    "        \n",
-    "    torch.cuda.empty_cache()"
+    "        mae, std = test(model, partition, char_to_ix, args, **{'bar':bar})\n",
+    "\n",
+    "        list_train_loss.append(train_loss)\n",
+    "        list_val_loss.append(val_loss)\n",
+    "        list_mae.append(mae)\n",
+    "        list_std.append(std)\n",
+    "    te = time.time()\n",
+    "    \n",
+    "    # Logging Experiment Results\n",
+    "    args.elapsed = te-ts\n",
+    "    args.train_losses = list_train_loss\n",
+    "    args.val_losses = list_val_loss\n",
+    "    args.maes = list_mae\n",
+    "    args.stds = list_std\n",
+    "    args.best_epoch = list_mae.index(max(list_mae))\n",
+    "    args.best_mae = max(list_mae)\n",
+    "    args.best_std = list_std[args.best_epoch]\n",
+    " \n",
+    "    # Clean cache\n",
+    "    torch.cuda.empty_cache()\n",
+    "    return args"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiment.1  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "165.41904091644287 3.1543420553207397 1.5763102052140865 0.8701013226664565\n"
+      "Processed  4/4 Exp: 100%|██████████| 168000/168000 [00:29<00:00, 10494.84it/s]"
      ]
     }
    ],
    "source": [
     "args.exp_name = 'exp_hidden_dim'\n",
     "args.n_layer = 2\n",
+    "args.n_stage = 1\n",
     "args.lr = 0.001\n",
     "args.l2_coef = 0\n",
     "args.optim = 'RMSProp'\n",
     "args.epoch = 1\n",
-    "args.batch_size=256\n",
+    "args.batch_size=1024\n",
     "args.test_batch_size=1024\n",
     "args.emb_train = False\n",
     "args.stride = 1\n",
@@ -327,37 +379,30 @@
     "args.dp_rate = 0\n",
     "args.block_type = 'a'\n",
     "args.device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "writer = Writer(prior_keyword=['n_layer', 'block_type', 'use_bn', 'dp_rate', 'emb_train', 'epoch', 'batch_size'])\n",
+    "partition = list_partition[0]\n",
     "\n",
-    "experiment(list_partition[0], args)"
+    "list_n_layer = [1,2]#,3,4,5]\n",
+    "list_n_stage = [1,2]#,3,4,5]\n",
+    "n_iter = args.epoch * (len(partition['train']) + len(partition['test']))\n",
+    "n_exp = len(list_n_layer)*len(list_n_stage)\n",
+    "\n",
+    "cnt_exp = 0\n",
+    "bar = tqdm(total=n_exp*n_iter, file=sys.stdout, position=0)\n",
+    "bar.set_description('Processed {:2}/{} Exp'.format(cnt_exp, n_exp))\n",
+    "\n",
+    "for n_layer in list_n_layer:\n",
+    "    for n_stage in list_n_stage:\n",
+    "        args.n_layer = n_layer\n",
+    "        args.n_stage = n_stage\n",
+    "        args.bar = bar\n",
+    "        result = experiment(partition, args)\n",
+    "        writer.write(result)\n",
+    "\n",
+    "        cnt_exp += 1\n",
+    "        bar.set_description('Processed {:2}/{} Exp'.format(cnt_exp, n_exp))\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
