Fix resblock construction process

--- a/Practice4_Tox21_CNN/Assignment4_logP_CNN.ipynb
+++ b/Practice4_Tox21_CNN/Assignment4_logP_CNN.ipynb
@@ -18,7 +18,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7ffb9afbcfb0>"
+       "<torch._C.Generator at 0x7f180f3cb090>"
       ]
      },
      "execution_count": 2,
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,23 +172,53 @@
     "class Net(nn.Module):\n",
     "    def __init__(self, args):\n",
     "        super(Net, self).__init__()   \n",
-    "        list_n_filter = [32*2**i for i in range(args.n_layer)]\n",
     "        \n",
+    "        # Create Atom Element embedding layer\n",
     "        self.embedding = self.create_emb_layer(args.vocab_size, args.emb_train)\n",
-    "\n",
-    "        list_res_blocks = [\n",
-    "            ResBlock(1, 32, args.stride, args.use_bn, args.dp_rate, args.block_type),\n",
-    "        ]\n",
+    "        \n",
+    "        # Create Residual Convolution layer\n",
+    "        list_res_blocks = list()\n",
+    "        n_channel = 1\n",
+    "        for i in range(args.n_stage):\n",
+    "            if i==0:\n",
+    "                list_res_blocks.append(ResBlock(n_channel, n_channel*args.start_channel, args.stride, args.use_bn, args.dp_rate, args.block_type))\n",
+    "                n_channel *= args.start_channel\n",
+    "            else:\n",
+    "                list_res_blocks.append(ResBlock(n_channel, n_channel*2, args.stride, args.use_bn, args.dp_rate, args.block_type))\n",
+    "                n_channel *= 2\n",
+    "            for j in range(args.n_layer-1):\n",
+    "                list_res_blocks.append(ResBlock(n_channel, n_channel, 1, args.use_bn, args.dp_rate, args.block_type))\n",
     "        self.res_blocks = nn.Sequential(*list_res_blocks)\n",
-    "        self.fc = nn.Linear(122880, 1)\n",
+    "        \n",
+    "        # Create MLP layers\n",
+    "        fc_shape = self._estimate_fc_shape((1, args.max_len,))\n",
+    "#         fc_shape = (4000, 200)\n",
+    "        self.fc1 = nn.Linear(fc_shape[-1], 200)\n",
+    "        self.fc2 = nn.Linear(200, 50)\n",
+    "        self.fc3 = nn.Linear(50, 1)\n",
+    "\n",
+    "        self.relu = nn.ReLU()\n",
     "\n",
     "    def forward(self, x):\n",
+    "        x = self._conv_forward(x)\n",
+    "        x = x.view(x.shape[0], -1)\n",
+    "        x = self.relu(self.fc1(x))\n",
+    "        x = self.relu(self.fc2(x))\n",
+    "        x = self.relu(self.fc3(x))\n",
+    "        return torch.squeeze(x)\n",
+    "    \n",
+    "    def _conv_forward(self, x):\n",
     "        embeds = self.embedding(x)\n",
     "        embeds = embeds.view(embeds.shape[0], 1, embeds.shape[1], embeds.shape[2])\n",
     "        x = self.res_blocks(embeds)\n",
-    "        x = x.view(x.shape[0], -1)\n",
-    "        x = self.fc(x)\n",
-    "        return torch.squeeze(x)\n",
+    "        return x\n",
+    "    \n",
+    "    def _estimate_fc_shape(self, input_shape):\n",
+    "        dummy_input = torch.zeros(input_shape).long()\n",
+    "        dummy_output = self._conv_forward(dummy_input)\n",
+    "        fc_shape = dummy_output.view(dummy_output.shape[0], -1).shape\n",
+    "        return fc_shape\n",
+    "        \n",
     "\n",
     "    def create_emb_layer(self, vocab_size, emb_train):\n",
     "        emb_layer = nn.Embedding(vocab_size, vocab_size)\n",
@@ -211,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +318,7 @@
     "\n",
     "    mae = mean_absolute_error(list_y, list_pred_y)\n",
     "    std = np.std(np.array(list_y)-np.array(list_pred_y))\n",
-    "    return mae, std\n",
+    "    return mae, std, np.array(list_y), np.array(list_pred_y)\n",
     "\n",
     "def experiment(partition, args):\n",
     "    ts = time.time()\n",
@@ -316,16 +346,24 @@
     "    list_mae = list()\n",
     "    list_std = list()\n",
     "    \n",
-    "\n",
+    "    args.best_mae = 10000\n",
     "    for epoch in range(args.epoch):\n",
     "        model, train_loss = train(model, partition, optimizer, criterion, char_to_ix, args, **{'bar':bar})\n",
     "        val_loss = validate(model, partition, criterion, char_to_ix, args)\n",
-    "        mae, std = test(model, partition, char_to_ix, args, **{'bar':bar})\n",
+    "        mae, std, true_y, pred_y = test(model, partition, char_to_ix, args, **{'bar':bar})\n",
     "\n",
     "        list_train_loss.append(train_loss)\n",
     "        list_val_loss.append(val_loss)\n",
     "        list_mae.append(mae)\n",
     "        list_std.append(std)\n",
+    "        \n",
+    "        if args.best_mae > mae:\n",
+    "            args.best_epoch = epoch\n",
+    "            args.best_mae = mae\n",
+    "            args.best_std = std\n",
+    "            args.best_true_y = true_y\n",
+    "            args.best_pred_y = pred_y\n",
+    "    \n",
     "    te = time.time()\n",
     "    \n",
     "    # Logging Experiment Results\n",
@@ -334,12 +372,6 @@
     "    args.val_losses = list_val_loss\n",
     "    args.maes = list_mae\n",
     "    args.stds = list_std\n",
-    "    args.best_epoch = list_mae.index(max(list_mae))\n",
-    "    args.best_mae = max(list_mae)\n",
-    "    args.best_std = list_std[args.best_epoch]\n",
-    " \n",
-    "    # Clean cache\n",
-    "    torch.cuda.empty_cache()\n",
     "    return args"
    ]
   },
@@ -352,14 +384,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ba5a355c572445d581fc3b64274f29e3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=504000), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed  4/4 Exp: 100%|██████████| 168000/168000 [00:29<00:00, 10494.84it/s]"
+      "\n",
+      "[Exp  1] got mae: 1.33, std: 1.30 at epoch  3\n",
+      "[Exp  2] got mae: 1.33, std: 1.30 at epoch  3\n",
+      "[Exp  3] got mae: 1.33, std: 1.30 at epoch  3\n",
+      "[Exp  4] got mae: 1.33, std: 1.30 at epoch  3\n"
      ]
     }
    ],
@@ -370,10 +420,11 @@
     "args.lr = 0.001\n",
     "args.l2_coef = 0\n",
     "args.optim = 'RMSProp'\n",
-    "args.epoch = 1\n",
-    "args.batch_size=1024\n",
-    "args.test_batch_size=1024\n",
+    "args.epoch = 3\n",
+    "args.batch_size=32\n",
+    "args.test_batch_size=32\n",
     "args.emb_train = False\n",
+    "args.start_channel = 8\n",
     "args.stride = 1\n",
     "args.use_bn = True\n",
     "args.dp_rate = 0\n",
@@ -382,27 +433,45 @@
     "writer = Writer(prior_keyword=['n_layer', 'block_type', 'use_bn', 'dp_rate', 'emb_train', 'epoch', 'batch_size'])\n",
     "partition = list_partition[0]\n",
     "\n",
-    "list_n_layer = [1,2]#,3,4,5]\n",
-    "list_n_stage = [1,2]#,3,4,5]\n",
+    "# Define Hyperparameter Search Space\n",
+    "list_n_layer = [1, 2]#,3,4,5]\n",
+    "list_n_stage = [1, 2]#,3,4,5]\n",
+    "\n",
+    "# Initialize num iteration, num experiment, progress bar\n",
     "n_iter = args.epoch * (len(partition['train']) + len(partition['test']))\n",
     "n_exp = len(list_n_layer)*len(list_n_stage)\n",
-    "\n",
     "cnt_exp = 0\n",
-    "bar = tqdm(total=n_exp*n_iter, file=sys.stdout, position=0)\n",
-    "bar.set_description('Processed {:2}/{} Exp'.format(cnt_exp, n_exp))\n",
+    "bar = tqdm_notebook(total=n_exp*n_iter, file=sys.stdout, position=0)\n",
+    "bar.set_description('P {:2}/{} Exp'.format(cnt_exp, n_exp))\n",
     "\n",
     "for n_layer in list_n_layer:\n",
     "    for n_stage in list_n_stage:\n",
+    "        # Update hyperparameter\n",
     "        args.n_layer = n_layer\n",
     "        args.n_stage = n_stage\n",
     "        args.bar = bar\n",
     "        result = experiment(partition, args)\n",
     "        writer.write(result)\n",
+    "        torch.cuda.empty_cache()\n",
     "\n",
     "        cnt_exp += 1\n",
-    "        bar.set_description('Processed {:2}/{} Exp'.format(cnt_exp, n_exp))\n",
-    "\n"
+    "        bar.set_description('P {:2}/{} Exp'.format(cnt_exp, n_exp))\n",
+    "        print('[Exp {:2}] got mae: {:2.2f}, std: {:2.2f} at epoch {:2}'.format(cnt_exp, result.best_mae, result.best_std, result.epoch))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
