Update introduction description

--- a/Practice4_logP_CNN/Assignment4_logP_CNN.ipynb
+++ b/Practice4_logP_CNN/Assignment4_logP_CNN.ipynb
@@ -1,6 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction  \n",
+    "\n",
+    "**!Recommend to view the notebook on Github!**  \n",
+    "Github Link : https://github.com/heartcored98/CH485_AI_Chemistry/blob/master/Practice4_logP_CNN/Assignment4_logP_CNN.ipynb\n",
+    "\n",
+    "In this jupyter notebook, a logP of the molecular will be predicted with the CNN on zinc_smiles dataset.  \n",
+    "**zinc_smiles** dataset consists of molecular smile strings as inputs and the logP values were calculated with RDkit\n",
+    "\n",
+    "This notebook has following features  \n",
+    "- Convert smile string into one-hot encoded matrix with **pytorch embedding layer**.  \n",
+    "- Support data spliting with sklearn **test_train_split** process easily.  \n",
+    "- Support atom embedding training with **pytorch embedding layer**. \n",
+    "- Support **residual CNN block** with different architecture (detail information looks ref).   \n",
+    "- Support enable/disable using **batch normalization**.  \n",
+    "- Manage experiment and model _hyperparameters_ at once with **argparse**  \n",
+    "- Logging each experiment setting with corresponding results in json format.  \n",
+    "- _Visualize_ experiment results with minimal changes of codes with **seaborn** and **pandas Dataframe**  \n",
+    "\n",
+    "Throughout the notebook, there are **4** experiments with following investigation purpose.  \n",
+    "Note that **regression performance** includes mean_absolute_error(mae) and standard deviation(std)  \n",
+    "1. Influence of the **n_stage** vs **n_layer**\n",
+    "2. Influence of the **Block Type** vs **Batch Normalization**.\n",
+    "3. Influence of the **Trainable Embedding** vs **Start Channel**.  \n",
+    "4. Influence of the **Learning rate** vs **L2 regularzation coefficient**.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1080,6 +1110,13 @@
     "**Discussion**  \n",
     "- Increasing the number of the convolution filter results in the increasing performance. However lots of computation power required.     \n",
     "- Training original embedding vector is meaningful to increase the performance. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiment.4 Learning rate vs L2 regularzation coefficient"
    ]
   },
   {
