--- a/Practice5_logP_GCN/Assignment5_logP_GCN.ipynb
+++ b/Practice5_logP_GCN/Assignment5_logP_GCN.ipynb
@@ -121,8 +121,7 @@
    "metadata": {},
    "source": [
     "Create char_to_ix Ref: https://github.com/pytorch/tutorials/blob/master/beginner_source/nlp/word_embeddings_tutorial.py  \n",
-    "Pre-defined Embedding Layer Ref: https://medium.com/@martinpella/how-to-use-pre-trained-word-embeddings-in-pytorch-71ca59249f76  \n",
-    "ResNet Variation Ref: https://towardsdatascience.com/an-overview-of-resnet-and-its-variants-5281e2f56035"
+    "Pre-defined Embedding Layer Ref: https://medium.com/@martinpella/how-to-use-pre-trained-word-embeddings-in-pytorch-71ca59249f76  "
    ]
   },
   {
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +154,6 @@
     "        model.train()\n",
     "        optimizer.zero_grad()\n",
     "        pred_y = model(X, A)\n",
-    "#         pred_y.require_grad = False\n",
     "        train_loss = criterion(pred_y, y)\n",
     "        epoch_train_loss += train_loss.item()\n",
     "        list_train_loss.append({'epoch':batch_idx/len(data_iter)+kwargs['epoch'], 'train_loss':train_loss.item()})\n",
@@ -296,9 +294,10 @@
     "        return x\n",
     "        \n",
     "class ResBlock(nn.Module):\n",
-    "    def __init__(self, in_dim, out_dim, use_bn, dp_rate, sc_type):\n",
+    "    def __init__(self, in_dim, out_dim, use_bn, use_atn, dp_rate, sc_type):\n",
     "        super(ResBlock, self).__init__()   \n",
     "        self.use_bn = use_bn\n",
+    "        self.use_atn = use_atn\n",
     "        self.sc_type = sc_type\n",
     "        self.gconv = GConv(in_dim, out_dim)\n",
     "        self.bn1 = BN1d(out_dim, use_bn)\n",
@@ -312,9 +311,7 @@
     "            self.bn2 = BN1d(out_dim, use_bn)\n",
     "            self.shortcut = nn.Sequential()\n",
     "            if in_dim != out_dim:\n",
-    "                self.shortcut.add_module(\n",
-    "                    'shortcut', nn.Linear(in_dim, out_dim, bias=False)\n",
-    "                )\n",
+    "                self.shortcut.add_module('shortcut', nn.Linear(in_dim, out_dim, bias=False))\n",
     "                \n",
     "        if self.sc_type == 'gsc':\n",
     "            self.g_fc1 = nn.Linear(out_dim, out_dim, bias=True)\n",
@@ -322,10 +319,7 @@
     "            self.sigmoid = nn.Sigmoid()\n",
     "\n",
     "    def forward(self, _x, A):\n",
-    "#         print(\"_x : \", _x.shape, \"A : \", A.shape)\n",
     "        x, A = self.gconv(_x, A)\n",
-    "#         print(\"x : \", x.shape, \"A : \", A.shape)\n",
-    "\n",
     "\n",
     "        if self.sc_type == 'no': #no skip-connection\n",
     "            x = self.relu(self.bn1(x))\n",
@@ -359,12 +353,12 @@
     "        hidden_dim = args.hidden_dim1\n",
     "        for i in range(args.n_stage):\n",
     "            if i==0:\n",
-    "                list_gconvs.append(ResBlock(58, hidden_dim, args.use_bn, args.dp_rate, args.sc_type))\n",
+    "                list_gconvs.append(ResBlock(58, hidden_dim, args.use_bn, args.use_atn, args.dp_rate, args.sc_type))\n",
     "            else:\n",
-    "                list_gconvs.append(ResBlock(hidden_dim, hidden_dim*2, args.use_bn, args.dp_rate, args.sc_type))\n",
+    "                list_gconvs.append(ResBlock(hidden_dim, hidden_dim*2, args.use_bn, args.use_atn, args.dp_rate, args.sc_type))\n",
     "                hidden_dim *= 2\n",
     "            for j in range(args.n_layer-1):\n",
-    "                list_gconvs.append(ResBlock(hidden_dim, hidden_dim, args.use_bn, args.dp_rate, args.sc_type))\n",
+    "                list_gconvs.append(ResBlock(hidden_dim, hidden_dim, args.use_bn, args.use_atn, args.dp_rate, args.sc_type))\n",
     "\n",
     "        self.gconvs = list_gconvs\n",
     "        for module in self.gconvs:\n",
