--- a/Practice5_logP_GCN/Assignment5_logP_GCN.ipynb
+++ b/Practice5_logP_GCN/Assignment5_logP_GCN.ipynb
@@ -1368,6 +1368,18 @@
    "display_name": "Python (pytorch)",
    "language": "python",
    "name": "pytorch"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
