Update experiment result

--- a/Practice6_logP_RNN/Practice6_logP_RNN.ipynb
+++ b/Practice6_logP_RNN/Practice6_logP_RNN.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Practice6_logP_RNN  \n",
+    "\n",
+    "#### Recommend to view on github : https://github.com/heartcored98/CH485_AI_Chemistry/blob/master/Practice6_logP_RNN/Practice6_logP_RNN.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -867,6 +876,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Variable Domain**  \n",
+    "- n_layer = [2, 3, 4, 5]  \n",
+    "- lr = [0.0003, 0.0006, 0.001]\n",
+    "\n",
+    "**Results & Discussions **\n",
+    "1. Number of layer more than 2 was possible to train. Train loss was not decreased. This might be caused by incorrect stacking layer method. \n",
+    "2. 0.001 Learning rate was best choice for the training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Experiment.3 Cell Type vs Bidirectional"
    ]
   },
@@ -1053,6 +1075,19 @@
     "                  'exp1_Loss {} vs {}'.format(variable1, variable2), top=0.9, quantile=0.98)\n",
     "\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Variable Domain**  \n",
+    "- cell_type = ['lstm', 'gru']  \n",
+    "- bidirectional = [True, False]\n",
+    "\n",
+    "**Results & Discussions **\n",
+    "1. Different with my original guess, using GRU cell does not improved the performance. \n",
+    "2. Also, enabling bidirectional feature caused little performance degradation. I think this could be caused by insufficient training epoch.  "
    ]
   },
   {
@@ -1255,6 +1290,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Variable Domain**  \n",
+    "- skip_connection = [True, False]  \n",
+    "- norm_type = ['ln', 'bn', 'None']\n",
+    "\n",
+    "**Results & Discussions **\n",
+    "1. If we applied normalization method, skip-connection increased the performance. \n",
+    "2. Unfortunately applying any normalization method caused slight performance degradation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Experiment.5 Emb train "
    ]
   },
@@ -1435,6 +1483,18 @@
     "                  'exp1_Loss {} vs {}'.format(variable1, variable2), top=0.9, quantile=0.98)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Variable Domain**  \n",
+    "- emb_train = [True, False]  \n",
+    "\n",
+    "**Results & Discussions **\n",
+    "1. Enabling embedding training significantly improved the performance. \n",
+    "2. Also it shows that model with trainable embedding more likely to be stable during training process.  "
    ]
   },
   {
