--- a/Practice7_logP_GGNN/Practice7_logP_GGNN.ipynb
+++ b/Practice7_logP_GGNN/Practice7_logP_GGNN.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Practice7 logP GGNN  \n",
+    "\n",
+    "#### Recommend to view on Github -> https://github.com/heartcored98/CH485_AI_Chemistry/blob/master/Practice7_logP_GGNN/Practice7_logP_GGNN.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
